--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
+    testImplementation 'com.alibaba:fastjson:1.2.61'
+    testImplementation 'com.squareup.okhttp3:okhttp:4.4.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
